--- a/corlaxx/app.yaml
+++ b/corlaxx/app.yaml
@@ -9,8 +9,16 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /templates
+  static_dir: templates
+  
+- url: /js
+  static_dir: js
+
 - url: .*
   script: main.app
+
+
 
 libraries:
 - name: webapp2
