--- a/corlaxx/app.yaml
+++ b/corlaxx/app.yaml
@@ -8,7 +8,8 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
-
+- url: /templates
+  static_dir: templates
 - url: .*
   script: main.app
 
